提交基础编程题目集 4-1简单输出整数

--- a/基础编程题目集/4-1_简单输出整数.md
+++ b/基础编程题目集/4-1_简单输出整数.md
@@ -27,15 +27,24 @@ int main ()
 
 /* 你的代码将被嵌在这里 */
 ```
-输入样例：
+**输入样例：**
 
 ```
 3
 ```
-输出样例：
+**输出样例：**
 
 ```
 1
 2
 3
+```
+**程序代码：**
+```c
+void PrintN(int N)
+{
+        int i;
+        for (i = 1; i <= N; ++i)
+                printf("%d\n", i);
+}
 ```
